!hotfix : 부모노드로 자식 찾기 알고리즘 fixed